[package]
name = "navabilitysdk"
version = "0.1.0"
authors = ["NavAbility(TM) by WhereWhen.ai Technologies Inc."]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
log = "^0.4"
tracing = "0.1"
graphql_client = "0.14"
reqwest = {version = "^0.11", features = ["json"], optional=true }
# for blocking calls, but features deps not 100% sorted out yet TODO
# graphql_client = { version="0.14", features = ["reqwest","reqwest-blocking"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, optional=true}

[features]
tokio = ["dep:tokio", "dep:reqwest"]
blocking = ["graphql_client/reqwest","graphql_client/reqwest-blocking"]

[profile.release]
opt-level = 2 # fast and small wasm