[package]
name = "navabilitysdk"
version = "0.1.0"
authors = ["NavAbility™ by WhereWhen.ai Technologies Inc."]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
chrono = "0.4"
log = "^0.4"
uuid = { version ="1", features = ["v4"] }
tracing = "0.1"
graphql_client = "0.14"
reqwest = {version = "^0.11", optional=true, features = [
  "json",
  # "multipart",
] }
# for blocking calls, but features deps not 100% sorted out yet TODO
# graphql_client = { version="0.14", features = ["reqwest","reqwest-blocking"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, optional=true}


[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-console = { version = "0.3", optional = true }


[features]
tokio = ["dep:tokio", "dep:reqwest"]
blocking = ["graphql_client/reqwest","graphql_client/reqwest-blocking"]
wasm = ["dep:reqwest"]
wasm-dev = ["dep:gloo-console"]

[profile.release]
opt-level = 2 # fast and small wasm
