[package]
name = "navabilitysdk"
version = "0.1.0-b4"
authors = ["NavAbility™ by WhereWhen.ai Technologies Inc."]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = "^1.0.218"
serde_json = "^1.0"
chrono = "^0.4"
log = "^0.4"
# hyper-util = "^0.1.3"
uuid = { version ="^1.14", features = ["v4","v5"] }
graphql_client = "^0.14"
reqwest = {version = "^0.12", optional=true, features = [
  "json",
  # "multipart",
] }
# for blocking calls, but features deps not 100% sorted out yet TODO
# graphql_client = { version="0.14", features = ["reqwest","reqwest-blocking"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1.40", default-features = false, optional=true}
tracing = "^0.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-console = { version = "^0.3", optional = true }


[features]
tokio = ["dep:tokio", "dep:reqwest"]
blocking = ["graphql_client/reqwest","graphql_client/reqwest-blocking"]
wasm = ["dep:reqwest"]
wasm-dev = ["dep:gloo-console"]

[profile.release]
opt-level = 'z' # fast and small wasm
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
graphql_client_cli = "^0.14"